--- a/TimeHopper/Storyboards/location.storyboard
+++ b/TimeHopper/Storyboards/location.storyboard
@@ -86,7 +86,7 @@
         <!--Локация-->
         <scene sceneID="IuB-Zz-I95">
             <objects>
-                <viewController id="AKO-FI-6tT" sceneMemberID="viewController">
+                <viewController id="AKO-FI-6tT" customClass="LocationViewController" customModule="TimeHopper" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gX5-JF-A1x">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -108,10 +108,10 @@
             </objects>
             <point key="canvasLocation" x="1817.5572519083969" y="29.577464788732396"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Location Tab Bar Controller-->
         <scene sceneID="52b-uw-kaA">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="qao-Vl-wD2" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="location" automaticallyAdjustsScrollViewInsets="NO" id="qao-Vl-wD2" customClass="LocationTabBarController" customModule="TimeHopper" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Rll-f1-nH7">
                         <autoresizingMask key="autoresizingMask"/>
