--- a/TimeHopper/Storyboards/QuizStoryboard.storyboard
+++ b/TimeHopper/Storyboards/QuizStoryboard.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Jpp-68-smb">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -15,85 +15,88 @@
             <objects>
                 <viewController storyboardIdentifier="QuizStoryboard" id="Y6W-OH-hqX" customClass="QuizViewController" customModule="TimeHopper" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="3VF-de-TIh">
-                                <rect key="frame" x="0.0" y="112.5" width="320" height="4"/>
+                                <rect key="frame" x="0.0" y="143" width="390" height="4"/>
                                 <color key="tintColor" red="0.4588235021" green="0.49019610879999997" blue="0.67450982329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </progressView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="fSH-nb-4lf" userLabel="Quiz Stack">
-                                <rect key="frame" x="16" y="130" width="288" height="421.5"/>
+                                <rect key="frame" x="16" y="160.66666666666666" width="358" height="357.66666666666674"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Если бы ты мог выбрать свою роль в прошлом, кем бы ты хотел быть?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="hM2-Cn-SHd">
-                                        <rect key="frame" x="0.0" y="0.0" width="288" height="68"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="358" height="45.333333333333336"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="19"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="G6f-jg-7I3" userLabel="1">
-                                        <rect key="frame" x="0.0" y="87" width="288" height="41"/>
+                                        <rect key="frame" x="0.0" y="64.333333333333343" width="358" height="40.666666666666657"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Изобретателем, меняющим мир своими открытиями " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wic-7u-N6j">
-                                                <rect key="frame" x="0.0" y="0.0" width="231" height="41"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="301" height="40.666666666666664"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9jO-6K-vp4">
-                                                <rect key="frame" x="239" y="5" width="51" height="31"/>
+                                                <rect key="frame" x="309" y="4.6666666666666572" width="51" height="31"/>
                                             </switch>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="VYw-hR-mMA" userLabel="2">
-                                        <rect key="frame" x="0.0" y="147" width="288" height="61"/>
+                                        <rect key="frame" x="0.0" y="124.00000000000004" width="358" height="40.666666666666671"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Героем эпической битвы, сражающимся за свой народ" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EfM-hn-PFe">
-                                                <rect key="frame" x="0.0" y="0.0" width="231" height="61"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="301" height="40.666666666666664"/>
                                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kF3-dq-qOR">
-                                                <rect key="frame" x="239" y="15" width="51" height="31"/>
+                                                <rect key="frame" x="309" y="4.6666666666666288" width="51" height="31"/>
                                             </switch>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="UHd-XQ-ZlP" userLabel="3">
-                                        <rect key="frame" x="0.0" y="227" width="288" height="61"/>
+                                        <rect key="frame" x="0.0" y="183.66666666666666" width="358" height="61"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Мудрым философом, задумывающимся над вечными вопросами" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLC-0A-8Zp">
-                                                <rect key="frame" x="0.0" y="0.0" width="231" height="61"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="301" height="61"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y1w-Xz-mrm">
-                                                <rect key="frame" x="239" y="15" width="51" height="31"/>
+                                                <rect key="frame" x="309" y="15" width="51" height="31"/>
                                             </switch>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="yOv-IL-rnb" userLabel="4">
-                                        <rect key="frame" x="0.0" y="307" width="288" height="61"/>
+                                        <rect key="frame" x="0.0" y="263.66666666666663" width="358" height="40.666666666666686"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Магическим существом, обитающим в загадочных лесах " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="02Y-n9-AZR">
-                                                <rect key="frame" x="0.0" y="0.0" width="231" height="61"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="301" height="40.666666666666664"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VN9-3C-qv9">
-                                                <rect key="frame" x="239" y="15" width="51" height="31"/>
+                                                <rect key="frame" x="309" y="4.6666666666666856" width="51" height="31"/>
                                             </switch>
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x8y-3k-e71">
-                                        <rect key="frame" x="0.0" y="387" width="288" height="34.5"/>
+                                        <rect key="frame" x="0.0" y="323.33333333333337" width="358" height="34.333333333333314"/>
                                         <color key="tintColor" name="AccentColor"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Ответить">
                                             <fontDescription key="titleFontDescription" type="system" pointSize="17"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="answerButtonPressed:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="7Ih-LJ-pGs"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -110,36 +113,23 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Начинаем " id="F3d-UD-RGE"/>
+                    <connections>
+                        <outlet property="firstAnswerLabel" destination="Wic-7u-N6j" id="SAB-ol-xqh"/>
+                        <outlet property="firstSwitch" destination="9jO-6K-vp4" id="1OO-p1-bIk"/>
+                        <outlet property="firstАnswerLabel" destination="Wic-7u-N6j" id="oID-ko-FdW"/>
+                        <outlet property="fourthAnswerLabel" destination="02Y-n9-AZR" id="Tzp-jB-stm"/>
+                        <outlet property="fourthSwitch" destination="VN9-3C-qv9" id="jC9-uj-xwR"/>
+                        <outlet property="questionLabel" destination="hM2-Cn-SHd" id="Fzm-Ea-ybr"/>
+                        <outlet property="questionProgressView" destination="3VF-de-TIh" id="wgd-tJ-ePI"/>
+                        <outlet property="secondAnswerLabel" destination="EfM-hn-PFe" id="uDT-EJ-aWX"/>
+                        <outlet property="secondSwitch" destination="kF3-dq-qOR" id="J1I-Me-YZ2"/>
+                        <outlet property="thirdAnswerLabel" destination="OLC-0A-8Zp" id="MK6-sy-ulA"/>
+                        <outlet property="thirdSwitch" destination="Y1w-Xz-mrm" id="Y4D-ao-yYg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="922.32558139534888" y="-14.806866952789701"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="VmV-am-YEU">
-            <objects>
-                <viewController id="Jpp-68-smb" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="XAH-jC-4MG" customClass="UIViewc">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HSP-vr-Q4u">
-                                <rect key="frame" x="122.5" y="266.5" width="75" height="35"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                            </button>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="cU8-YV-qFC"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="HSP-vr-Q4u" firstAttribute="centerX" secondItem="XAH-jC-4MG" secondAttribute="centerX" id="k9E-oO-xb3"/>
-                            <constraint firstItem="HSP-vr-Q4u" firstAttribute="centerY" secondItem="XAH-jC-4MG" secondAttribute="centerY" id="x99-jv-Azt"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nIW-mN-PPr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-724" y="-16"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sf8-RN-2IY">
@@ -147,7 +137,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="9Cw-hY-hxW" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="vcY-sV-XQU">
-                        <rect key="frame" x="0.0" y="20" width="320" height="92.5"/>
+                        <rect key="frame" x="0.0" y="47" width="390" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <navigationBarAppearance key="standardAppearance"/>
                     </navigationBar>
